--- a/sass/bootstrap/_navbar.scss
+++ b/sass/bootstrap/_navbar.scss
@@ -198,7 +198,7 @@
   @include navbar-vertical-align(34px);
   background-color: transparent;
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
-  border: 1px solid transparent;
+  border: 1px solid $opaque;
   border-radius: $border-radius-base;
 
   // We remove the `outline` here, but later compensate by attaching `:hover`
