--- a/sass/bootstrap/_variables.scss
+++ b/sass/bootstrap/_variables.scss
@@ -1,25 +1,9 @@
+@import "colors";
 $bootstrap-sass-asset-helper: false !default;
 // Superhero 3.3.6
 // Variables
 // --------------------------------------------------
 
-
-//== Colors
-//
-//## Gray and brand colors for use across Bootstrap.
-
-$gray-base:              #000 !default;
-$gray-darker:            lighten($gray-base, 13.5%) !default; // #222
-$gray-dark:              lighten($gray-base, 20%) !default;   // #333
-$gray:                   lighten($gray-base, 33.5%) !default; // #555
-$gray-light:             #DC5348 !default;   // #999
-$gray-lighter:           #EBEBEB !default; // #eee
-
-$brand-primary:         #DF691A !default;
-$brand-success:         #5cb85c !default;
-$brand-info:            #5bc0de !default;
-$brand-warning:         #f0ad4e !default;
-$brand-danger:          #d9534f !default;
 
 
 //== Scaffolding
@@ -103,7 +87,7 @@ $padding-xs-horizontal:     5px !default;
 $line-height-large:         1.3333333 !default; // extra decimals for Win 8.1 Chrome
 $line-height-small:         1.5 !default;
 
-$border-radius-base:        0 !default;
+$border-radius-base:        3 !default;
 $border-radius-large:       0 !default;
 $border-radius-small:       0 !default;
 
@@ -366,15 +350,15 @@ $navbar-padding-vertical:          (($navbar-height - $line-height-computed) / 2
 $navbar-collapse-max-height:       340px !default;
 
 $navbar-default-color:             $text-color !default;
-$navbar-default-bg:                $gray-light !default;
+$navbar-default-bg:                $opaque !default;
 $navbar-default-border:            transparent !default;
 
 // Navbar links
 $navbar-default-link-color:                $text-color !default;
 $navbar-default-link-hover-color:          $navbar-default-link-color !default;
-$navbar-default-link-hover-bg:             $dropdown-link-hover-bg !default;
+$navbar-default-link-hover-bg:             $brand-darker !default;
 $navbar-default-link-active-color:         $navbar-default-link-color !default;
-$navbar-default-link-active-bg:            $dropdown-link-hover-bg !default;
+$navbar-default-link-active-bg:            $brand !default;
 $navbar-default-link-disabled-color:       #ccc !default;
 $navbar-default-link-disabled-bg:          transparent !default;
 
