--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1849,7 +1849,7 @@ img {
   line-height: 1.42857;
   background-color: #2B3E50;
   border: 1px solid #ddd;
-  border-radius: 0;
+  border-radius: 3;
   -webkit-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
@@ -2366,7 +2366,7 @@ code {
   font-size: 90%;
   color: #c7254e;
   background-color: #f9f2f4;
-  border-radius: 0;
+  border-radius: 3;
 }
 
 /* line 24, ../sass/bootstrap/_code.scss */
@@ -2398,7 +2398,7 @@ pre {
   color: #333333;
   background-color: #f5f5f5;
   border: 1px solid #ccc;
-  border-radius: 0;
+  border-radius: 3;
 }
 /* line 55, ../sass/bootstrap/_code.scss */
 pre code {
@@ -3896,7 +3896,7 @@ output {
   background-color: #fff;
   background-image: none;
   border: 1px solid transparent;
-  border-radius: 0;
+  border-radius: 3;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
@@ -4500,7 +4500,7 @@ select[multiple].input-lg,
   padding: 8px 16px;
   font-size: 15px;
   line-height: 1.42857;
-  border-radius: 0;
+  border-radius: 3;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -4963,7 +4963,7 @@ tbody.collapse.in {
   background-color: #DC5348;
   border: 1px solid transparent;
   border: 1px solid transparent;
-  border-radius: 0;
+  border-radius: 3;
   -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   background-clip: padding-box;
@@ -5277,8 +5277,8 @@ tbody.collapse.in {
 }
 /* line 175, ../sass/bootstrap/_button-groups.scss */
 .btn-group-vertical > .btn:first-child:not(:last-child) {
-  border-top-right-radius: 0;
-  border-top-left-radius: 0;
+  border-top-right-radius: 3;
+  border-top-left-radius: 3;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
@@ -5286,8 +5286,8 @@ tbody.collapse.in {
 .btn-group-vertical > .btn:last-child:not(:first-child) {
   border-top-right-radius: 0;
   border-top-left-radius: 0;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 3;
+  border-bottom-left-radius: 3;
 }
 
 /* line 184, ../sass/bootstrap/_button-groups.scss */
@@ -5397,7 +5397,7 @@ tbody.collapse.in {
   text-align: center;
   background-color: #DC5348;
   border: 1px solid transparent;
-  border-radius: 0;
+  border-radius: 3;
 }
 /* line 89, ../sass/bootstrap/_input-groups.scss */
 .input-group-addon.input-sm,
@@ -5558,7 +5558,7 @@ tbody.collapse.in {
   margin-right: 2px;
   line-height: 1.42857;
   border: 1px solid transparent;
-  border-radius: 0 0 0 0;
+  border-radius: 3 3 0 0;
 }
 /* line 89, ../sass/bootstrap/_navs.scss */
 .nav-tabs > li > a:hover {
@@ -5579,7 +5579,7 @@ tbody.collapse.in {
 }
 /* line 122, ../sass/bootstrap/_navs.scss */
 .nav-pills > li > a {
-  border-radius: 0;
+  border-radius: 3;
 }
 /* line 125, ../sass/bootstrap/_navs.scss */
 .nav-pills > li + li {
@@ -5638,7 +5638,7 @@ tbody.collapse.in {
 /* line 193, ../sass/bootstrap/_navs.scss */
 .nav-tabs-justified > li > a, .nav-tabs.nav-justified > li > a {
   margin-right: 0;
-  border-radius: 0;
+  border-radius: 3;
 }
 /* line 199, ../sass/bootstrap/_navs.scss */
 .nav-tabs-justified > .active > a, .nav-tabs.nav-justified > .active > a,
@@ -5652,7 +5652,7 @@ tbody.collapse.in {
   /* line 206, ../sass/bootstrap/_navs.scss */
   .nav-tabs-justified > li > a, .nav-tabs.nav-justified > li > a {
     border-bottom: 1px solid #DC5348;
-    border-radius: 0 0 0 0;
+    border-radius: 3 3 0 0;
   }
   /* line 210, ../sass/bootstrap/_navs.scss */
   .nav-tabs-justified > .active > a, .nav-tabs.nav-justified > .active > a,
@@ -5699,7 +5699,7 @@ tbody.collapse.in {
 @media (min-width: 768px) {
   /* line 11, ../sass/bootstrap/_navbar.scss */
   .navbar {
-    border-radius: 0;
+    border-radius: 3;
   }
 }
 
@@ -5872,8 +5872,8 @@ tbody.collapse.in {
   margin-bottom: 8px;
   background-color: transparent;
   background-image: none;
-  border: 1px solid transparent;
-  border-radius: 0;
+  border: 1px solid rgba(1, 1, 1, 0.7);
+  border-radius: 3;
 }
 /* line 206, ../sass/bootstrap/_navbar.scss */
 .navbar-toggle:focus {
@@ -6056,8 +6056,8 @@ tbody.collapse.in {
 /* line 332, ../sass/bootstrap/_navbar.scss */
 .navbar-fixed-bottom .navbar-nav > li > .dropdown-menu {
   margin-bottom: 0;
-  border-top-right-radius: 0;
-  border-top-left-radius: 0;
+  border-top-right-radius: 3;
+  border-top-left-radius: 3;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
@@ -6110,7 +6110,7 @@ tbody.collapse.in {
 }
 /* line 397, ../sass/bootstrap/_navbar.scss */
 .navbar-default {
-  background-color: #DC5348;
+  background-color: rgba(1, 1, 1, 0.7);
   border-color: transparent;
 }
 /* line 401, ../sass/bootstrap/_navbar.scss */
@@ -6133,12 +6133,12 @@ tbody.collapse.in {
 /* line 418, ../sass/bootstrap/_navbar.scss */
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
   color: #EBEBEB;
-  background-color: #da473b;
+  background-color: #44615E;
 }
 /* line 425, ../sass/bootstrap/_navbar.scss */
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
   color: #EBEBEB;
-  background-color: #da473b;
+  background-color: #45C494;
 }
 /* line 433, ../sass/bootstrap/_navbar.scss */
 .navbar-default .navbar-nav > .disabled > a, .navbar-default .navbar-nav > .disabled > a:hover, .navbar-default .navbar-nav > .disabled > a:focus {
@@ -6151,7 +6151,7 @@ tbody.collapse.in {
 }
 /* line 444, ../sass/bootstrap/_navbar.scss */
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-  background-color: #da473b;
+  background-color: #44615E;
 }
 /* line 448, ../sass/bootstrap/_navbar.scss */
 .navbar-default .navbar-toggle .icon-bar {
@@ -6164,7 +6164,7 @@ tbody.collapse.in {
 }
 /* line 462, ../sass/bootstrap/_navbar.scss */
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-  background-color: #da473b;
+  background-color: #45C494;
   color: #EBEBEB;
 }
 @media (max-width: 767px) {
@@ -6175,12 +6175,12 @@ tbody.collapse.in {
   /* line 475, ../sass/bootstrap/_navbar.scss */
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
     color: #EBEBEB;
-    background-color: #da473b;
+    background-color: #44615E;
   }
   /* line 482, ../sass/bootstrap/_navbar.scss */
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
     color: #EBEBEB;
-    background-color: #da473b;
+    background-color: #45C494;
   }
   /* line 490, ../sass/bootstrap/_navbar.scss */
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a, .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:focus {
@@ -6324,7 +6324,7 @@ tbody.collapse.in {
   margin-bottom: 21px;
   list-style: none;
   background-color: #DC5348;
-  border-radius: 0;
+  border-radius: 3;
 }
 /* line 13, ../sass/bootstrap/_breadcrumbs.scss */
 .breadcrumb > li {
@@ -6346,7 +6346,7 @@ tbody.collapse.in {
   display: inline-block;
   padding-left: 0;
   margin: 21px 0;
-  border-radius: 0;
+  border-radius: 3;
 }
 /* line 10, ../sass/bootstrap/_pagination.scss */
 .pagination > li {
@@ -6369,14 +6369,14 @@ tbody.collapse.in {
 .pagination > li:first-child > a,
 .pagination > li:first-child > span {
   margin-left: 0;
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
+  border-bottom-left-radius: 3;
+  border-top-left-radius: 3;
 }
 /* line 32, ../sass/bootstrap/_pagination.scss */
 .pagination > li:last-child > a,
 .pagination > li:last-child > span {
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
+  border-bottom-right-radius: 3;
+  border-top-right-radius: 3;
 }
 /* line 41, ../sass/bootstrap/_pagination.scss */
 .pagination > li > a:hover, .pagination > li > a:focus,
@@ -6703,7 +6703,7 @@ a.badge:hover, a.badge:focus {
   line-height: 1.42857;
   background-color: #2B3E50;
   border: 1px solid #ddd;
-  border-radius: 0;
+  border-radius: 3;
   -webkit-transition: border 0.2s ease-in-out;
   -o-transition: border 0.2s ease-in-out;
   transition: border 0.2s ease-in-out;
@@ -6735,7 +6735,7 @@ a.thumbnail.active {
   padding: 15px;
   margin-bottom: 21px;
   border: 1px solid transparent;
-  border-radius: 0;
+  border-radius: 3;
 }
 /* line 16, ../sass/bootstrap/_alerts.scss */
 .alert h4 {
@@ -6852,7 +6852,7 @@ a.thumbnail.active {
   height: 21px;
   margin-bottom: 21px;
   background-color: #DC5348;
-  border-radius: 0;
+  border-radius: 3;
   -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 }
@@ -7024,14 +7024,14 @@ a.thumbnail.active {
 }
 /* line 31, ../sass/bootstrap/_list-group.scss */
 .list-group-item:first-child {
-  border-top-right-radius: 0;
-  border-top-left-radius: 0;
+  border-top-right-radius: 3;
+  border-top-left-radius: 3;
 }
 /* line 34, ../sass/bootstrap/_list-group.scss */
 .list-group-item:last-child {
   margin-bottom: 0;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 3;
+  border-bottom-left-radius: 3;
 }
 
 /* line 46, ../sass/bootstrap/_list-group.scss */
@@ -7244,7 +7244,7 @@ button.list-group-item-danger.active:focus {
   margin-bottom: 21px;
   background-color: #DC5348;
   border: 1px solid transparent;
-  border-radius: 0;
+  border-radius: 3;
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 }
@@ -7267,8 +7267,8 @@ button.list-group-item-danger.active:focus {
 .panel-heading {
   padding: 10px 15px;
   border-bottom: 1px solid transparent;
-  border-top-right-radius: -1;
-  border-top-left-radius: -1;
+  border-top-right-radius: 2;
+  border-top-left-radius: 2;
 }
 /* line 27, ../sass/bootstrap/_panels.scss */
 .panel-heading > .dropdown .dropdown-toggle {
@@ -7296,8 +7296,8 @@ button.list-group-item-danger.active:focus {
   padding: 10px 15px;
   background-color: #da473b;
   border-top: 1px solid transparent;
-  border-bottom-right-radius: -1;
-  border-bottom-left-radius: -1;
+  border-bottom-right-radius: 2;
+  border-bottom-left-radius: 2;
 }
 
 /* line 63, ../sass/bootstrap/_panels.scss */
@@ -7315,15 +7315,15 @@ button.list-group-item-danger.active:focus {
 .panel > .list-group:first-child .list-group-item:first-child,
 .panel > .panel-collapse > .list-group:first-child .list-group-item:first-child {
   border-top: 0;
-  border-top-right-radius: -1;
-  border-top-left-radius: -1;
+  border-top-right-radius: 2;
+  border-top-left-radius: 2;
 }
 /* line 82, ../sass/bootstrap/_panels.scss */
 .panel > .list-group:last-child .list-group-item:last-child,
 .panel > .panel-collapse > .list-group:last-child .list-group-item:last-child {
   border-bottom: 0;
-  border-bottom-right-radius: -1;
-  border-bottom-left-radius: -1;
+  border-bottom-right-radius: 2;
+  border-bottom-left-radius: 2;
 }
 /* line 89, ../sass/bootstrap/_panels.scss */
 .panel > .panel-heading + .panel-collapse > .list-group .list-group-item:first-child {
@@ -7357,16 +7357,16 @@ button.list-group-item-danger.active:focus {
 /* line 121, ../sass/bootstrap/_panels.scss */
 .panel > .table:first-child,
 .panel > .table-responsive:first-child > .table:first-child {
-  border-top-right-radius: -1;
-  border-top-left-radius: -1;
+  border-top-right-radius: 2;
+  border-top-left-radius: 2;
 }
 /* line 127, ../sass/bootstrap/_panels.scss */
 .panel > .table:first-child > thead:first-child > tr:first-child,
 .panel > .table:first-child > tbody:first-child > tr:first-child,
 .panel > .table-responsive:first-child > .table:first-child > thead:first-child > tr:first-child,
 .panel > .table-responsive:first-child > .table:first-child > tbody:first-child > tr:first-child {
-  border-top-left-radius: -1;
-  border-top-right-radius: -1;
+  border-top-left-radius: 2;
+  border-top-right-radius: 2;
 }
 /* line 131, ../sass/bootstrap/_panels.scss */
 .panel > .table:first-child > thead:first-child > tr:first-child td:first-child,
@@ -7377,7 +7377,7 @@ button.list-group-item-danger.active:focus {
 .panel > .table-responsive:first-child > .table:first-child > thead:first-child > tr:first-child th:first-child,
 .panel > .table-responsive:first-child > .table:first-child > tbody:first-child > tr:first-child td:first-child,
 .panel > .table-responsive:first-child > .table:first-child > tbody:first-child > tr:first-child th:first-child {
-  border-top-left-radius: -1;
+  border-top-left-radius: 2;
 }
 /* line 135, ../sass/bootstrap/_panels.scss */
 .panel > .table:first-child > thead:first-child > tr:first-child td:last-child,
@@ -7388,21 +7388,21 @@ button.list-group-item-danger.active:focus {
 .panel > .table-responsive:first-child > .table:first-child > thead:first-child > tr:first-child th:last-child,
 .panel > .table-responsive:first-child > .table:first-child > tbody:first-child > tr:first-child td:last-child,
 .panel > .table-responsive:first-child > .table:first-child > tbody:first-child > tr:first-child th:last-child {
-  border-top-right-radius: -1;
+  border-top-right-radius: 2;
 }
 /* line 143, ../sass/bootstrap/_panels.scss */
 .panel > .table:last-child,
 .panel > .table-responsive:last-child > .table:last-child {
-  border-bottom-right-radius: -1;
-  border-bottom-left-radius: -1;
+  border-bottom-right-radius: 2;
+  border-bottom-left-radius: 2;
 }
 /* line 149, ../sass/bootstrap/_panels.scss */
 .panel > .table:last-child > tbody:last-child > tr:last-child,
 .panel > .table:last-child > tfoot:last-child > tr:last-child,
 .panel > .table-responsive:last-child > .table:last-child > tbody:last-child > tr:last-child,
 .panel > .table-responsive:last-child > .table:last-child > tfoot:last-child > tr:last-child {
-  border-bottom-left-radius: -1;
-  border-bottom-right-radius: -1;
+  border-bottom-left-radius: 2;
+  border-bottom-right-radius: 2;
 }
 /* line 153, ../sass/bootstrap/_panels.scss */
 .panel > .table:last-child > tbody:last-child > tr:last-child td:first-child,
@@ -7413,7 +7413,7 @@ button.list-group-item-danger.active:focus {
 .panel > .table-responsive:last-child > .table:last-child > tbody:last-child > tr:last-child th:first-child,
 .panel > .table-responsive:last-child > .table:last-child > tfoot:last-child > tr:last-child td:first-child,
 .panel > .table-responsive:last-child > .table:last-child > tfoot:last-child > tr:last-child th:first-child {
-  border-bottom-left-radius: -1;
+  border-bottom-left-radius: 2;
 }
 /* line 157, ../sass/bootstrap/_panels.scss */
 .panel > .table:last-child > tbody:last-child > tr:last-child td:last-child,
@@ -7424,7 +7424,7 @@ button.list-group-item-danger.active:focus {
 .panel > .table-responsive:last-child > .table:last-child > tbody:last-child > tr:last-child th:last-child,
 .panel > .table-responsive:last-child > .table:last-child > tfoot:last-child > tr:last-child td:last-child,
 .panel > .table-responsive:last-child > .table:last-child > tfoot:last-child > tr:last-child th:last-child {
-  border-bottom-right-radius: -1;
+  border-bottom-right-radius: 2;
 }
 /* line 164, ../sass/bootstrap/_panels.scss */
 .panel > .panel-body + .table,
@@ -7508,7 +7508,7 @@ button.list-group-item-danger.active:focus {
 /* line 226, ../sass/bootstrap/_panels.scss */
 .panel-group .panel {
   margin-bottom: 0;
-  border-radius: 0;
+  border-radius: 3;
 }
 /* line 230, ../sass/bootstrap/_panels.scss */
 .panel-group .panel + .panel {
@@ -7716,7 +7716,7 @@ button.list-group-item-danger.active:focus {
   margin-bottom: 20px;
   background-color: #DC5348;
   border: 1px solid transparent;
-  border-radius: 0;
+  border-radius: 3;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
@@ -8002,7 +8002,7 @@ button.close {
   color: #fff;
   text-align: center;
   background-color: #000;
-  border-radius: 0;
+  border-radius: 3;
 }
 
 /* line 36, ../sass/bootstrap/_tooltip.scss */
@@ -8872,7 +8872,7 @@ button.close {
 /* line 17, ../sass/_bootswatch.scss */
 .navbar-default .badge {
   background-color: #fff;
-  color: #DC5348;
+  color: rgba(1, 1, 1, 0.7);
 }
 /* line 25, ../sass/_bootswatch.scss */
 .navbar-inverse .badge {
@@ -9190,33 +9190,66 @@ a.list-group-item-danger.active:hover, a.list-group-item-danger.active:focus {
 body {
   width: 100%;
   overflow-x: hidden;
-  background-color: #dc5348;
-  height: 2000px;
+  background-color: #000;
+  height: auto;
 }
 
 /* line 19, ../sass/screen.scss */
+hr {
+  border-color: white;
+}
+
+/* line 23, ../sass/screen.scss */
 header, .blocky {
   min-height: 100vh;
   height: auto;
   overflow: hidden;
+  padding-top: 50px;
+  z-index: 0;
 }
 
-/* line 25, ../sass/screen.scss */
+/* line 33, ../sass/screen.scss */
 header {
-  background-color: #265;
+  padding-top: 30vh !important;
+}
+
+/* line 37, ../sass/screen.scss */
+.title {
+  text-shadow: 0 1px 2px rgba(1, 1, 1, 0.7);
+  letter-spacing: 2px;
+}
+
+/* line 42, ../sass/screen.scss */
+footer {
+  background-color: #333333;
+  height: 300px;
+}
+
+/* line 47, ../sass/screen.scss */
+.bg {
+  display: block;
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  transform: scale(1.1);
+  background-color: #000;
   background-image: url("../images/header.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  padding-top: 50px;
+  z-index: -1;
 }
 
-/* line 34, ../sass/screen.scss */
-.intro {
-  background-color: #fff;
+/* line 67, ../sass/screen.scss */
+.about {
+  background-color: #45C494;
+  z-index: 1;
 }
 
-/* line 38, ../sass/screen.scss */
-.howto {
-  background-color: #3fe;
+/* line 72, ../sass/screen.scss */
+.offer {
+  background-color: #44615E;
 }
